operator/src/main/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo1-service
spec:
  selector:
    app.kubernetes.io/name: demo1
  ports:
    - name: service
      protocol: TCP
      port: 8888
      targetPort: service
